# lod.lobbywatch.ch

./: .gitignore  Dockerfile  Ideen Recherche Lobbywatch  Makefile  README.md  config.json  config.local.json  docker-compose.yml  export.sh  package-lock.json  package.json  pyproject.toml  stack.yml  todo.md
.github/workflows/: ci.yaml  r2rml.yml
database/: .gitignore  README.md  docker-compose.yml  get-dump.sh  wirksamkeit.sql
k8s/: deployment.yaml  ingress.yaml
lod.lobbywatch.ch/: Dockerfile  config.json  package-lock.json  package.json
lod.lobbywatch.ch/k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
lod.lobbywatch.ch/views/: footer.html  graph-explorer.html  header.html  home.html  navigation.html  ontodia.html  yasgui.html
mapping/: .project  lobbywatch-mapping.xrm  lobbywatch-sources.xrm  src-gen  vocabularies.xrm
mapping/src-gen/: lobbywatch-mapping.r2rml.ttl
ontop-scripts/: .env  1-convert.sh  2-upload-all.sh  2-upload.sh  3-link.sh  3-upload-zefix.sh  4-sparql.sh  5-delete.sh  5-sparql.sh  README.md  metadata.ttl  mysql.properties  ontop-entrypoint.sh  zefix.py
ontop-scripts/queries/: access_right.rq  clear_graph.rq  committees_map_auto.rq  committees_map_manual.rq  factions.rq  factions_auto.rq  factions_auto_inwards.rq  parties.rq  (+10 more)
pipeline/: .gitignore  package-lock.json  package.json  pipeline.ttl
src-gen/: lobbywatch-mapping.r2rml.ttl  ontop.mysql.properties
stardog-scripts/: .gitignore  README.md  load.sh  lobbywatch-mysql.properties  upload.sh  wd.sh
views/: footer.html  home.html  index.html  navigation.html
(+5 files in other folders)
