[tool.poetry]
name = "lod.lobbywatch.ch"
version = "0.1.0"
description = ""
authors = ["Magdalena Surowka <magdalena@surowka.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
graphly = {git = "https://github.com/zazuko/graphly.git", rev = "main"}
rdflib = "^6.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
